Bug 162227 - ODBC error 07009 "Invalid Descriptor Index" opening a table in MS SQL Server using ODBC
Summary: ODBC error 07009 "Invalid Descriptor Index" opening a table in MS SQL Server ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
24.8.0.1 rc
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.2.0 target:24.8.0.3
Keywords: bisected, regression
Depends on:
Blocks: 162219
  Show dependency treegraph
 
Reported: 2024-07-27 13:51 UTC by Mike Kaganski
Modified: 2024-08-01 10:33 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2024-07-27 13:51:55 UTC
Try steps 1-13 from bug 162219 comment 0.

In version 24.8.0.1, just selecting selecting table dbo/Foo would make the table silently disappear in a second. If instead of selection, you double-click it, then an error is shown:

[Microsoft][ODBC Driver 18 for SQL Server]Invalid Descriptor Index at C:/cygwin64/home/buildslave/source/libo-core/connectivity/source/drivers/odbc/OTools.cxx:352

and the opened "Table Data View" window is empty.

Regression after commit e8248b5e4b19df8ba469d1ca3a762960c1a053b5 "cid#1545222 COPY_INSTEAD_OF_MOVE", 2023-12-19.
Comment 1 Mike Kaganski 2024-07-27 14:37:48 UTC
https://gerrit.libreoffice.org/c/core/+/171097
Comment 2 Commit Notification 2024-07-27 16:19:05 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/64da0afacf13bc5b1a294f90d5c1cc305d43d28f

tdf#162227: use strict order of evaluations accessing columns

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-07-29 21:53:31 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/e53c49c925a468822f3afc489a62367feea7f688

tdf#162227: use strict order of evaluations accessing columns

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-08-01 10:07:46 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8-0":

https://git.libreoffice.org/core/commit/b7e846dc3387692f0a8ed1805c6ceaf9808a3f31

tdf#162227: use strict order of evaluations accessing columns

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.