tdf#162227: use strict order of evaluations accessing columns

ODBC SQLGetData requires that data must be retrieved in increasing
column number order, unless the driver supports SQL_GD_ANY_ORDER extension (see
https://learn.microsoft.com/en-us/sql/odbc/reference/syntax/sqlgetdata-function).
We can't emplace_back(getString(4), getInt(5), ..., getString(12), getInt(17)),
because MSVC would reorder calls into getInt(17) -> getString(12) -> ..., and then
MS SQL Server ODBC driver will give error on access of column 12 after column 17.

This partially reverts commit e8248b5e4b19df8ba469d1ca3a762960c1a053b5 "cid#1545222
COPY_INSTEAD_OF_MOVE", 2023-12-19.

Change-Id: I9bf53086e526c886c4794af51a60e61d4cce89ef
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171097
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 64da0afacf13bc5b1a294f90d5c1cc305d43d28f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171189
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>